@@ -12,6 +12,8 @@ Version 2.0 -> 2.1 Maharani Hills
 - Improved stability and performance on TFF problems
 - Added PicoSAT and the ability to use PicoSAT as a SAT terminator
 - Added support for flexible-arity derivation operations
+- Removed obsolete eproof-scripts. Use --proof-object to generate a
+  checkable proof.
 
 Version 1.9.1 -> 2.0 Turzum
 
